fix: 文章底部链接跳转

--- a/astro-blog-template/src/components/Bio.astro
+++ b/astro-blog-template/src/components/Bio.astro
@@ -1,10 +1,10 @@
 <div>
   <img src="/assets/profile-pic.jpg" alt="Headshot of Maxi Ferreira">
   <p>
-    Hi, I'm <strong>Maxi</strong>. I'm a software engineer and data scientist based in Los Angeles.
-    You can follow me on <a href="https://www.twitter.com/Charca" target="_blank">Twitter</a>,
-    see some of my work on <a href="https://www.github.com/Charca" target="_blank">GitHub</a>,
-    or read more about me on <a href="https://www.maxiferreira.com" target="_blank">my website</a>.
+    Hi, I'm <strong>Zard</strong>. I'm a front-end development engineer in Shenzhen, China.
+    You can follow me on <a href="https://juejin.cn/user/1390225439328023" target="_blank">JueJin</a>,
+    see some of my work on <a href="https://www.github.com/Zard999" target="_blank">GitHub</a>,
+    or read more about me on <a href="https://www.pointfree.com" target="_blank">my website</a>.
   </p>
 </div>
 
